[project]
name = "py-sse"
version = "0.10.0a1"
description = "Wirth-style minimal SSE web framework with topic-scoped pub/sub"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Mike Deufel", email = "MDeufel13@gmail.com" }]
dependencies = [
    "apsw>=3.45.0",
    "brotli>=1.1.0",
    "html-tags>=0.4.4",
]
keywords = ["sse", "datastar", "hypermedia", "web", "minimal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[project.urls]
Homepage = "https://github.com/Deufel/py-sse"
Repository = "https://github.com/Deufel/py-sse"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "playwright>=1.59.0",
    "pytest>=9.0.3",
    "pytest-playwright>=0.7.2",
]
